# alloyed_challenge

./: Alloyed_challange_report.ipynb  README.md  main.py  pyproject.toml
.ipynb_checkpoints/: Alloyed_challange_report-checkpoint.ipynb  Alloyed_challange_report_test-checkpoint.ipynb
data/: builds.csv  machine_logs.csv  parts.csv
