[project]
name = "alloyed-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pymc>=5.26.1",
    "pytensor>=2.35.1",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
]
